# jb_peak_detection

./: .gitignore  img_to_array.py  main.py  peak_detection_template.ipynb  pyproject.toml
img/: graphs.psd
